@@ -1222,6 +1222,7 @@ CONFIG_RT2860V2_AP_VIDEO_TURBINE=y
 CONFIG_RT2860V2_AUTO_CH_SELECT_ENHANCE=y
 CONFIG_RT2860V2_80211N_DRAFT3=y
 CONFIG_RT2860V2_MCAST_RATE_SPECIFIC=y
+CONFIG_RT2860V2_SNMP=y
 # CONFIG_RALINK_RT2880_AP_DBG is not set
 # CONFIG_RT2860V2_SET_MAC_FROM_EEPROM is not set
 CONFIG_RT2860V2_AP_BRIDGE_FASTPATH=y
