@@ -1,12 +1,12 @@
 config RT2860V2_AP
 	tristate "Ralink RT2860 802.11n AP support"
 	depends on NET_RADIO 
-	
+
 config RT2860V2_AP_V24_DATA_STRUCTURE
 	bool
 	depends on RT2860V2_AP
 	default y
-	
+
 config  RT2860V2_AP_LED
 	bool "LED Support"
 	depends on RT2860V2_AP
@@ -125,9 +125,9 @@ config  RT2860V2_MCAST_RATE_SPECIFIC
 	bool "User specific tx rate of mcast pkt"
 	depends on RT2860V2_AP
 
-#config  RT2860V2_SNMP
-#	bool "Net-SNMP Support"
-#	depends on RT2860V2_AP
+config  RT2860V2_SNMP
+	bool "Net-SNMP Support"
+	depends on RT2860V2_AP
 
 config RALINK_RT2880_AP_DBG
 	bool "Debug support for AP mode"
